--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "classnames": "^2.3.1",
     "framer-motion": "^6.5.1",
+    "magic-sdk": "^9.0.0",
     "next": "12.2.2",
     "react": "18.2.0",
     "react-dom": "18.2.0"
