--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@magic-sdk/admin": "^1.4.1",
     "classnames": "^2.3.1",
     "framer-motion": "^6.5.1",
-    "magic-sdk": "^9.0.0",
+    "jsonwebtoken": "^8.5.1",
+    "magic-sdk": "^8.1.1",
     "next": "12.2.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
