--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "classnames": "^2.3.1",
     "cookie": "^0.5.0",
     "framer-motion": "^6.5.1",
+    "jose": "^4.11.0",
     "jsonwebtoken": "^8.5.1",
     "magic-sdk": "^9.0.0",
     "next": "12.2.2",
